# sp2025_dev

./: Cargo.toml  Makefile.toml  compose.yaml
adapter/: Cargo.toml
adapter/migrations/: 20251117062106_start.down.sql  20251117062106_start.up.sql
adapter/src/: lib.rs
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  mod.rs  reservation.rs  space.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  mod.rs  reservation.rs  space.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs  lib.rs
api/src/handler/: auth.rs  mod.rs  reservation.rs  space.rs  user.rs
api/src/model/: mod.rs  reservation.rs  space.rs  user.rs
api/src/route/: auth.rs  mod.rs  space.rs  user.rs  v1.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/model/: id.rs  mod.rs
kernel/src/model/reservation/: event.rs  mod.rs
kernel/src/model/space/: event.rs  mod.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  reservation.rs  space.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  error.rs
src/: main.rs
