[package]
name = "registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adapter.workspace = true
kernel.workspace = true
shared.workspace = true
mockall.workspace = true
google-gmail1.workspace = true
yup-oauth2.workspace = true
anyhow.workspace = true
tokio.workspace = true